Updated distribution to work with latest Protocol::IMAP and provide an example as well
git-svn-id: http://entitymodel.com/svn/trunk/Net-Async-IMAP@415 c5bf8c3b-bf20-4ed3-b413-d5547a49f493

--- a/dist.ini
+++ b/dist.ini
@@ -1,13 +1,15 @@
-name    = Net-Async-IMAP
-author  = Tom Molesworth <tom@entitymodel.com>
-license = Perl_5
+name   		 = Net-Async-IMAP
+author 		 = Tom Molesworth <net-async-imap@entitymodel.com>
+license		 = Perl_5
 copyright_holder = Tom Molesworth
 copyright_year   = 2010
 
 [@Basic]
 
 [Prereqs]
-EntityModel		= 1.000
+parent			= 0
+Socket			= 0
+Protocol::IMAP		= 0.001
 
 [Prereqs / TestRequires]
 
