Fixes for the Net::Async::IMAP classes as deployed for v0.002
git-svn-id: http://entitymodel.com/svn/trunk/Net-Async-IMAP@494 c5bf8c3b-bf20-4ed3-b413-d5547a49f493

--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,8 @@ copyright_year   = 2010
 [Prereqs]
 parent			= 0
 Socket			= 0
-Protocol::IMAP		= 0.001
+Protocol::IMAP		= 0.002
+IO::Async		= 0.34
 IO::Async::SSL		= 0.04
 
 [Prereqs / TestRequires]
