Updated Changes following CPAN release
git-svn-id: http://entitymodel.com/svn/trunk/Net-Async-IMAP@2173 c5bf8c3b-bf20-4ed3-b413-d5547a49f493

--- a/dist.ini
+++ b/dist.ini
@@ -21,7 +21,7 @@ copyright_year   = 2010
 [Prereqs]
 parent = 0
 Socket = 0
-Protocol::IMAP = 0.003
+Protocol::IMAP = 0.004
 IO::Async = 0.54
 IO::Async::SSL = 0.12
 [Prereqs / TestRequires]
@@ -36,12 +36,12 @@ Test::More = 0.98
 [InstallGuide]
 [MetaJSON]
 [PodSyntaxTests]
-[PodCoverageTests]
+; [PodCoverageTests]
 [MojibakeTests]
 [Test::Compile]
 [Test::Synopsis]
-[Test::UnusedVars]
-[Test::EOL]
+; [Test::UnusedVars]
+; [Test::EOL]
 [Test::Version]
 ; Broken - can't find CGI::Application, see https://rt.cpan.org/Ticket/Display.html?id=78729
 [Test::Pod::LinkCheck]
