Update email address
git-svn-id: http://entitymodel.com/svn/trunk/Net-Async-IMAP@2734 c5bf8c3b-bf20-4ed3-b413-d5547a49f493

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name   		 = Net-Async-IMAP
-author 		 = Tom Molesworth <net-async-imap@entitymodel.com>
+author 		 = Tom Molesworth <net-async-imap@perlsite.co.uk>
 license		 = Perl_5
 copyright_holder = Tom Molesworth
 copyright_year   = 2010
