Update dist.ini and cpanfile
git-svn-id: http://entitymodel.com/svn/trunk/Net-Async-IMAP@2737 c5bf8c3b-bf20-4ed3-b413-d5547a49f493

--- a/dist.ini
+++ b/dist.ini
@@ -1,31 +1,31 @@
 name   		 = Net-Async-IMAP
-author 		 = Tom Molesworth <net-async-imap@perlsite.co.uk>
+author 		 = Tom Molesworth <cpan@perlsite.co.uk>
 license		 = Perl_5
 copyright_holder = Tom Molesworth
 copyright_year   = 2010
 
-; can't use @Basic, due to ExtraTests, see below
-[GatherDir]
+[Git::GatherDir]
 [PruneCruft]
+[PruneFiles]
+filenames = Makefile.PL
 [ManifestSkip]
 [MetaYAML]
 [License]
 [Readme]
+[MakeMaker]
+eumm_version = 6.48
+prereq_fatal = 1
 [ExecDir]
 [ShareDir]
-[MakeMaker]
+dir = share
 [Manifest]
 [TestRelease]
 [ConfirmRelease]
 [UploadToCPAN]
-[Prereqs]
-parent = 0
-Socket = 0
-Protocol::IMAP = 0.004
-IO::Async = 0.54
-IO::Async::SSL = 0.12
-[Prereqs / TestRequires]
-Test::More = 0.98
+[Prereqs::FromCPANfile]
+[Prereqs / BuildRequires]
+perl = 5.010001
+[CheckPrereqsIndexed]
 [CheckExtraTests]
 [NextRelease]
 [VersionFromModule]
@@ -33,31 +33,39 @@ Test::More = 0.98
 [PkgVersion]
 [Homepage]
 [Bugtracker]
+; [PrePAN]
+; author = http://prepan.org/user/xyz
+; module = http://prepan.org/user/xyz
 [InstallGuide]
 [MetaJSON]
+[InsertExample]
+[PodInherit]
 [PodSyntaxTests]
-; [PodCoverageTests]
 [MojibakeTests]
+[Test::CheckDeps]
 [Test::Compile]
 [Test::Synopsis]
-; [Test::UnusedVars]
 ; [Test::EOL]
 [Test::Version]
-; Broken - can't find CGI::Application, see https://rt.cpan.org/Ticket/Display.html?id=78729
-[Test::Pod::LinkCheck]
+; [Test::Pod::LinkCheck]
+; [PodCoverageTests]
+; [Test::UnusedVars]
+[ReportVersions::Tiny]
+[SpellingCommonMistakesTests]
+[Signature]
+[CopyMakefilePLFromBuild]
 [ArchiveRelease]
 directory = /home/tom/dev/CPAN-Archive
-; seems to be broken in several ways, even after getting past installation hurdles it complains
-; about the repository needing to be upgraded - all I want is the basic svn cp functionality
-; so handling this outside dzil for now
-; [Subversion::Tag]
-; tag_url = https://entitymodel.com/svn/tag/
-;[Test::LocalBrew]
-;brews = dzil-clean-5.16.0
-; brews = dzil-clean-5.10.1
-; brews = dzil-clean-5.12.4
-; brews = dzil-clean-5.14.2
-; Enabling this breaks the localbrew test due to hardcoded '../..' to find the top-level dist
-; directory, as long as I remember the dzil xtest step things seem to work okay with this
-; disabled though.
-; [ExtraTests]
+;[Git::Check]
+;allow_dirty = dist.ini
+;changelog = Changes
+[Git::Commit]
+allow_dirty = dist.ini
+allow_dirty = cpanfile
+allow_dirty = Changes
+allow_dirty = Makefile.PL
+[Git::Tag]
+tag_format = v%v
+tag_message = Tag v%v for CPAN release
+[ReversionOnRelease]
+
