--- a/dist.ini
+++ b/dist.ini
@@ -7,7 +7,7 @@ copyright_year   = 2010
 [Git::GatherDir]
 [PruneCruft]
 [PruneFiles]
-filenames = Makefile.PL
+;filenames = Makefile.PL
 [ManifestSkip]
 [MetaYAML]
 [License]
